Started web portion and added Postgres to the backend.
