# backend/http.go
@@ -5,9 +5,6 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/gorilla/websocket"
-	"github.com/jmoiron/sqlx"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/tuckersn/chatbackend/api"
 	docs "github.com/tuckersn/chatbackend/docs"
 )
@@ -17,7 +14,7 @@ var upgrader = websocket.Upgrader{
 	WriteBufferSize: 1024,
 }
 
-func httpServer(_db *sqlx.DB) {
+func httpServer() {
 	r := gin.Default()
 	docs.SwaggerInfo.BasePath = "/api"
 
@@ -44,25 +41,24 @@ func httpServer(_db *sqlx.DB) {
 		}
 		messageRouter := apiRouter.Group("/message")
 		{
-			messageRouter.POST("/", api.HttpMessageCreate)
 			messageRouter.GET("/*messageId", api.HttpMessageGet)
-			messageRouter.POST("/*messageId", api.HttpMessageUpdate)
+			messageRouter.POST("/*messageId", api.HttpMessageCreateOrUpdate)
 			messageRouter.DELETE("/*messageId", api.HttpMessageDelete)
 		}
-		userRouter := apiRouter.Group("/user")
-		{
-			userRouter.GET("/", api.HttpUserGet)
-			userRouter.GET("/*userId", api.HttpUserGet)
-			userRouter.POST("/", api.HttpUserCreate)
-			userRouter.POST("/*userId", api.HttpUserUpdate)
-			userRouter.GET("/*userId", api.HttpUserGet)
-			userRouter.DELETE("/*userId", api.HttpUserDelete)
-		}
+		// userRouter := apiRouter.Group("/user")
+		// {
+		// 	userRouter.GET("/", api.HttpUserGet)
+		// 	userRouter.GET("/*userId", api.HttpUserGet)
+		// 	userRouter.POST("/", api.HttpUserCreate)
+		// 	userRouter.POST("/*userId", api.HttpUserUpdate)
+		// 	userRouter.GET("/*userId", api.HttpUserGet)
+		// 	userRouter.DELETE("/*userId", api.HttpUserDelete)
+		// }
 	}
 
-	api.SettingsRoutes(r)
-	api.ServerRoutes(r)
+	// api.SettingsRoutes(r)
+	// api.ServerRoutes(r)
 
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	// r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.Run() // listen and serve on
 }
